Added undef-extended real numbers
Piggybacking: source files doc (mainly license statement).

--- a/src/CXX/unit_test/math/Makefile.am
+++ b/src/CXX/unit_test/math/Makefile.am
@@ -4,12 +4,17 @@ AM_LDFLAGS  =
 
 # Unit test scripts
 TESTS = \
-    lingebra.sh
+    lingebra.sh \
+    R_undef.sh
 
 
 # Unit test programs
 check_PROGRAMS = \
-    lingebra
+    lingebra \
+    R_undef
 
 lingebra_SOURCES = \
     lingebra.cxx
+
+R_undef_SOURCES = \
+    R_undef.cxx
