LVQ basic unit test
Learning using fixed amount of training loops and learnig factor.
Testing on learning data (whether the training set has been learned).
Clustering a few previously unknown vectors.

--- a/configure.ac
+++ b/configure.ac
@@ -140,5 +140,6 @@ AC_CONFIG_FILES([
     src/CXX/ml/Makefile
     src/CXX/unit_test/Makefile
     src/CXX/unit_test/math/Makefile
+    src/CXX/unit_test/ml/Makefile
 ])
 AC_OUTPUT
