--- a/src/CXX/unit_test/math/Makefile.am
+++ b/src/CXX/unit_test/math/Makefile.am
@@ -1,5 +1,5 @@
 # Compiler & linker flags
-AM_CXXFLAGS = -g -Wall -Werror
+AM_CXXFLAGS = -g -Wall -Werror -DENABLE_DEBUG
 AM_LDFLAGS  =
 
 # Unit test scripts
